hphp/hack/test/typecheck/missing_tparam4.php.exp
File "missing_tparam4.php", line 5, characters 11-13:
The type Foo expects 1 type parameter(s) (Typing[4101])
File "missing_tparam4.php", line 3, characters 9-11:
Definition is here
