hphp/hack/test/typecheck/missing_tparam4.php
<?hh

newtype Foo<T> as string = string;

enum Bar: Foo {
}
